# LibraryManagementSystem

./: CMakeLists.txt  README.md
include/: book.h  book_linked_list.h  borrowed_books_linked_list.h  console.h  library.h  reader.h  reader_double_linked_list.h
src/: book.cpp  book_linked_list.cpp  borrowed_books_linked_list.cpp  console.cpp  library.cpp  main.cpp  reader.cpp  reader_double_linked_list.cpp
